sgleam-core-tests/tests/snapshots/integration__run_images@isosceles_triangle1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/isosceles_triangle1.gleam
---
<svg width="398.47787923669824" height="17.431148549531628" xmlns="http://www.w3.org/2000/svg">
  <path d="M 398.47787923669824 17.431148549531628 L 199.23893961834912 0.0 L 0.0 17.431148549531628 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
