sgleam-core-tests/tests/snapshots/integration__run_images@isosceles_triangle2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/isosceles_triangle2.gleam
---
<svg width="31.05828541230249" height="57.9555495773441" xmlns="http://www.w3.org/2000/svg">
  <path d="M 31.05828541230249 57.9555495773441 L 15.529142706151244 0.0 L 0.0 57.9555495773441 Z" fill="rgba(127, 255, 212, 1.0)" />
</svg>
