sgleam-core-tests/tests/snapshots/integration__run_images@isosceles_triangle3.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/isosceles_triangle3.gleam
---
<svg width="31.05828541230252" height="57.955549577344094" xmlns="http://www.w3.org/2000/svg">
  <path d="M 31.05828541230252 0.0 L 15.52914270615126 57.955549577344094 L 0.0 0.0 Z" fill="rgba(32, 178, 170, 1.0)" />
</svg>
