sgleam-core-tests/tests/snapshots/integration__run_images@line3.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/line3.gleam
---
<svg width="30.0" height="20.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 20.0 L 30.0 0.0" fill="none" stroke="rgba(255, 0, 0, 1.0)" />
</svg>
