sgleam-core-tests/tests/snapshots/integration__run_images@overlay2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/overlay2.gleam
---
<svg width="60.0" height="60.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 60.0 30.0 A 30.0 30.0 0.0 0 1 0.0 30.0 A 30.0 30.0 0.0 0 1 60.0 30.0 Z" fill="rgba(0, 0, 0, 1.0)" />
    <g>
      <path d="M 55.0 30.0 A 25.0 25.0 0.0 0 1 5.0 30.0 A 25.0 25.0 0.0 0 1 55.0 30.0 Z" fill="rgba(255, 0, 0, 1.0)" />
      <g>
        <path d="M 50.0 30.0 A 20.0 20.0 0.0 0 1 10.0 30.0 A 20.0 20.0 0.0 0 1 50.0 30.0 Z" fill="rgba(0, 0, 0, 1.0)" />
        <g>
          <path d="M 45.0 30.0 A 15.0 15.0 0.0 0 1 15.0 30.0 A 15.0 15.0 0.0 0 1 45.0 30.0 Z" fill="rgba(255, 0, 0, 1.0)" />
          <g>
            <path d="M 40.0 30.0 A 10.0 10.0 0.0 0 1 20.0 30.0 A 10.0 10.0 0.0 0 1 40.0 30.0 Z" fill="rgba(0, 0, 0, 1.0)" />
            <path d="M 35.0 30.0 A 5.0 5.0 0.0 0 1 25.0 30.0 A 5.0 5.0 0.0 0 1 35.0 30.0 Z" fill="rgba(255, 0, 0, 1.0)" />
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
