sgleam-core-tests/tests/snapshots/integration__run_images@overlay_align_offset2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/overlay_align_offset2.gleam
---

